--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "SDTM Timer",
   "short_name": "Timer",
-  "start_url": "index.html",
+  "start_url": "index.html?v=1.1",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
