--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,24 @@
 {
-  "name": "SDTM Timer",
+  "name": "Meeting Timer",
   "short_name": "Timer",
-  "start_url": "index.html?v=1.1",
+  "description": "High-visibility speech timer for Toastmasters meetings.",
+  "start_url": "index.html?v=2.1.2",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#000000",
+  "orientation": "portrait",
+  "background_color": "#F2F2F7",
+  "theme_color": "#007AFF",
   "icons": [
     {
-      "src": "icon.png",
+      "src": "icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
